[tool.poetry]
name = "pycounts_cxy24"
version = "0.1.0"
description = "This package counts words"
authors = ["Cindy Zhang"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
